feature: Create abstraction for configuration
It allows better API to set sources and extensions.

Fixes #2